Better demo page

--- a/file-drop.html
+++ b/file-drop.html
@@ -15,6 +15,7 @@ Element providing file drop event notify.
 @blurb Element providing file drop event notify.
 @status alpha
 @homepage http://chadliu23.github.io/file-drop
+@demo demo/index.html
 -->
 <dom-module id="file-drop">
 
