--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../iron-component-page/iron-component-page.html">
 
 </head>
-<body unresolved>
+<body>
 
   <iron-component-page></iron-component-page>
 
